news edits and news details page

--- a/news details.html
+++ b/news details.html
@@ -295,271 +295,58 @@
                     </div>
                 </div>
                 <div class="spcisp-page-title heading-1">
-                    <h1>الأخبار</h1>
+                    <h1>المركز يوقّع مذكرة تعاون مع الهيئة العامة للمنافسة</h1>
                 </div>
             </div>
         </div>
 
     </section>
 
-    <!--News Section-->
-    <section class="scisp-news-page py-48">
+    <!--News details-->
+    <article class="scisp-news-details py-48">
         <div class="container">
+            <div class="news-details-content m-auto">
             <div class="d-flex flex-column gap-32">
-                <div class="scisp-news-filter">
-                    <p class="heading-6">
-                        عرض 1 - 12 من 189
+                <div class="news-details-image m-auto">
+                    <img class="w-100 rounded-8" src="/image/561d81dc934fa598cc0b82820ff3bf51aa8a2408.jpg" />
+                </div>
+                <div class="news-details-article heading-6">
+                    <p>
+                        وقّع المركز السعودي للشراكات الاستراتيجية الدولية مذكرة تعاون مع مشروع سلام للتواصل الحضاري، يوم
+                        الخميس 29 ربيع أول 1443ه، الموافق 4 نوفمبر 2021م، في مقر المركز؛ لأجل تحقيق الإنجازات المستهدفة
+                        من الطرفين، وتبادل الخبرات في البحوث والدراسات والتعاون المشترك في مجالات التأهيل والتدريب، بما
+                        يسهم في دعم الجهود الرامية إلى تعزيز الصورة الإيجابية للمملكة لدى شعوب العالم، من خلال تنمية
+                        التواصل الحضاري، وتعزيزه مع المجتمعات الدولية في إطار الشراكات الاستراتيجية الدولية للمملكة.
+                        وقّع المذكرة كل من معالي الدكتور فيصل بن حمد الصقير الرئيس التنفيذي للمركز السعودي للشراكات
+                        الاستراتيجية الدولية، ومعالي الأستاذ فيصل بن عبدالرحمن بن معمر المشرف العام على مشروع سلام
+                        للتواصل الحضاري، وبحضور عدد من منسوبي المركز وسلام.
+                    </p>
+                    <p>
+                        وتعليقًا على توقيع هذه المذكرة؛ أكد معالي الدكتور فيصل الصقير أن مذكرة التعاون الموقعة بين مركز
+                        الشراكات الاستراتيجية ومشروع سلام تأتي في إطار الدور المحوري الذي يقوم به المركز في المنظومة
+                        الحكومية، بتوحيد جهودها بما يخص الشراكات الاستراتيجية للمملكة، والمتابعة الحثيثة مع أصحاب
+                        المصلحة في المملكة ودول العالم، بما يحقق المواءمة في الأهداف المشتركة. موضحًا معاليه أن المركز
+                        بخبرته في التواصل الدولي يساند مشروع سلام في مد جسور التواصل الحضاري مع شعوب العالم، وكذلك
+                        استفادة المركز ومشروع سلام من الدراسات والبحوث، التي يجريها الطرفان بشكل مستمر لتحديد الفرص
+                        ومعرفة التطورات العالمية، وكذلك استفادة الطرفين من المنصات المحلية والدولية التي يعمل الطرفان
+                        على تنظيمها أو المشاركة في فعالياتها المختلفة، بما يخدم الصورة الحضارية للمملكة.
+                    </p>
+                    <p>
+                        من جانبه؛ رحّب معالي الأستاذ فيصل بن معمر المشرف العام على مشروع سلام بالتعاون مع المركز السعودي
+                        للشراكات الاستراتيجية الدولية، مشيراً إلى أن هذه الشراكة تعزز من إيصال الصورة الذهنية الإيجابية
+                        عن المملكة، وتساهم في مد جسور التواصل مع الشعوب والثقافات المتنوعة ونشر ثقافة التواصل الحضاري.
+                        يُشار إلى أن مذكرة التعاون تؤطر بشكل عام التنسيق والتعاون بين الطرفين، ومشاركة المعلومات
+                        والبيانات والتقارير اللازمة وتقديم الخدمات الاستشارية والمشورة العلمية حسب اختصاص كل طرف؛ حيث
+                        تهدف هذه المذكرة إلى التعاون في مجال الدراسات والأبحاث، والتعاون في مجال التأهيل والتدريب،
+                        ومشاركة معلومات قاعدة البيانات والتقارير الدولية، وإقامة برامج مشتركة تعزز الصورة الإيجابية عن
+                        المملكة، والتعاون في مجال المشاركة في المؤتمرات والفعاليات ذات العلاقة.
                     </p>
                 </div>
-                <div class="scisp-news-grid">
 
-                    <!--Card-->
-                    <div class="news-card-grid d-flex flex-column gap-24 rounded-16 px-16 py-16">
-                        <div class="news-card-grid-image">
-                            <img class="w-100 rounded-8" src="/image/561d81dc934fa598cc0b82820ff3bf51aa8a2408.jpg" />
-                        </div>
-                        <div class="d-flex flex-column gap-8">
-                            <div>
-                                <h4 class="mb-0 font-semibold heading-4">
-                                    مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
-                                    للتواصل الحضاري
-                                </h4>
-                            </div>
-                        </div>
-                        <div class="news-card-grid-date ">
-                            <span>
-                                04 نوفمبر 2021
-                            </span>
-                        </div>
-
-                        <div class="d-flex flex-row-reverse news-read-btn">
-                            <button class="btn btn-secondary d-flex align-items-center">
-                                <i class="icon-scisp-angle-right"></i>
-                            </button>
-                        </div>
-                    </div>
-                    <!--Card-->
-                    <div class="news-card-grid d-flex flex-column gap-24 rounded-16 px-16 py-16">
-                        <div class="news-card-grid-image">
-                            <img class="w-100 rounded-8" src="/image/561d81dc934fa598cc0b82820ff3bf51aa8a2408.jpg" />
-                        </div>
-                        <div class="d-flex flex-column gap-8">
-                            <div>
-                                <h4 class="mb-0 font-semibold heading-4">
-                                    مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
-                                    للتواصل الحضاري
-                                </h4>
-                            </div>
-                        </div>
-                        <div class="news-card-grid-date ">
-                            <span>
-                                04 نوفمبر 2021
-                            </span>
-                        </div>
-
-                        <div class="d-flex flex-row-reverse news-read-btn">
-                            <button class="btn btn-secondary d-flex align-items-center">
-                                <i class="icon-scisp-angle-right"></i>
-                            </button>
-                        </div>
-                    </div>
-                    <!--Card-->
-                    <div class="news-card-grid d-flex flex-column gap-24 rounded-16 px-16 py-16">
-                        <div class="news-card-grid-image">
-                            <img class="w-100 rounded-8" src="/image/561d81dc934fa598cc0b82820ff3bf51aa8a2408.jpg" />
-                        </div>
-                        <div class="d-flex flex-column gap-8">
-                            <div>
-                                <h4 class="mb-0 font-semibold heading-4">
-                                    مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
-                                    للتواصل الحضاري
-                                </h4>
-                            </div>
-                        </div>
-                        <div class="news-card-grid-date ">
-                            <span>
-                                04 نوفمبر 2021
-                            </span>
-                        </div>
-
-                        <div class="d-flex flex-row-reverse news-read-btn">
-                            <button class="btn btn-secondary d-flex align-items-center">
-                                <i class="icon-scisp-angle-right"></i>
-                            </button>
-                        </div>
-                    </div>
-                    <!--Card-->
-                    <div class="news-card-grid d-flex flex-column gap-24 rounded-16 px-16 py-16">
-                        <div class="news-card-grid-image">
-                            <img class="w-100 rounded-8" src="/image/561d81dc934fa598cc0b82820ff3bf51aa8a2408.jpg" />
-                        </div>
-                        <div class="d-flex flex-column gap-8">
-                            <div>
-                                <h4 class="mb-0 font-semibold heading-4">
-                                    مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
-                                    للتواصل الحضاري
-                                </h4>
-                            </div>
-                        </div>
-                        <div class="news-card-grid-date ">
-                            <span>
-                                04 نوفمبر 2021
-                            </span>
-                        </div>
-
-                        <div class="d-flex flex-row-reverse news-read-btn">
-                            <button class="btn btn-secondary d-flex align-items-center">
-                                <i class="icon-scisp-angle-right"></i>
-                            </button>
-                        </div>
-                    </div>
-                    <!--Card-->
-                    <div class="news-card-grid d-flex flex-column gap-24 rounded-16 px-16 py-16">
-                        <div class="news-card-grid-image">
-                            <img class="w-100 rounded-8" src="/image/561d81dc934fa598cc0b82820ff3bf51aa8a2408.jpg" />
-                        </div>
-                        <div class="d-flex flex-column gap-8">
-                            <div>
-                                <h4 class="mb-0 font-semibold heading-4">
-                                    مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
-                                    للتواصل الحضاري
-                                </h4>
-                            </div>
-                        </div>
-                        <div class="news-card-grid-date ">
-                            <span>
-                                04 نوفمبر 2021
-                            </span>
-                        </div>
-
-                        <div class="d-flex flex-row-reverse news-read-btn">
-                            <button class="btn btn-secondary d-flex align-items-center">
-                                <i class="icon-scisp-angle-right"></i>
-                            </button>
-                        </div>
-                    </div>
-                    <!--Card-->
-                    <div class="news-card-grid d-flex flex-column gap-24 rounded-16 px-16 py-16">
-                        <div class="news-card-grid-image">
-                            <img class="w-100 rounded-8" src="/image/561d81dc934fa598cc0b82820ff3bf51aa8a2408.jpg" />
-                        </div>
-                        <div class="d-flex flex-column gap-8">
-                            <div>
-                                <h4 class="mb-0 font-semibold heading-4">
-                                    مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
-                                    للتواصل الحضاري
-                                </h4>
-                            </div>
-                        </div>
-                        <div class="news-card-grid-date ">
-                            <span>
-                                04 نوفمبر 2021
-                            </span>
-                        </div>
-
-                        <div class="d-flex flex-row-reverse news-read-btn">
-                            <button class="btn btn-secondary d-flex align-items-center">
-                                <i class="icon-scisp-angle-right"></i>
-                            </button>
-                        </div>
-                    </div>
-                    <!--Card-->
-                    <div class="news-card-grid d-flex flex-column gap-24 rounded-16 px-16 py-16">
-                        <div class="news-card-grid-image">
-                            <img class="w-100 rounded-8" src="/image/561d81dc934fa598cc0b82820ff3bf51aa8a2408.jpg" />
-                        </div>
-                        <div class="d-flex flex-column gap-8">
-                            <div>
-                                <h4 class="mb-0 font-semibold heading-4">
-                                    مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
-                                    للتواصل الحضاري
-                                </h4>
-                            </div>
-                        </div>
-                        <div class="news-card-grid-date ">
-                            <span>
-                                04 نوفمبر 2021
-                            </span>
-                        </div>
-
-                        <div class="d-flex flex-row-reverse news-read-btn">
-                            <button class="btn btn-secondary d-flex align-items-center">
-                                <i class="icon-scisp-angle-right"></i>
-                            </button>
-                        </div>
-                    </div>
-                    <!--Card-->
-                    <div class="news-card-grid d-flex flex-column gap-24 rounded-16 px-16 py-16">
-                        <div class="news-card-grid-image">
-                            <img class="w-100 rounded-8" src="/image/561d81dc934fa598cc0b82820ff3bf51aa8a2408.jpg" />
-                        </div>
-                        <div class="d-flex flex-column gap-8">
-                            <div>
-                                <h4 class="mb-0 font-semibold heading-4">
-                                    مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
-                                    للتواصل الحضاري
-                                </h4>
-                            </div>
-                        </div>
-                        <div class="news-card-grid-date ">
-                            <span>
-                                04 نوفمبر 2021
-                            </span>
-                        </div>
-
-                        <div class="d-flex flex-row-reverse news-read-btn">
-                            <button class="btn btn-secondary d-flex align-items-center">
-                                <i class="icon-scisp-angle-right"></i>
-                            </button>
-                        </div>
-                    </div>
-                    <!--Card-->
-                    <div class="news-card-grid d-flex flex-column gap-24 rounded-16 px-16 py-16">
-                        <div class="news-card-grid-image">
-                            <img class="w-100 rounded-8" src="/image/561d81dc934fa598cc0b82820ff3bf51aa8a2408.jpg" />
-                        </div>
-                        <div class="d-flex flex-column gap-8">
-                            <div>
-                                <h4 class="mb-0 font-semibold heading-4">
-                                    مركز الشراكات الاستراتيجية يوقّع مذكرة تعاون مع مشروع سلام
-                                    للتواصل الحضاري
-                                </h4>
-                            </div>
-                        </div>
-                        <div class="news-card-grid-date ">
-                            <span>
-                                04 نوفمبر 2021
-                            </span>
-                        </div>
-
-                        <div class="d-flex flex-row-reverse news-read-btn">
-                            <button class="btn btn-secondary d-flex align-items-center">
-                                <i class="icon-scisp-angle-right"></i>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <div class="scisp-page-pagination m-auto px-16 py-16 d-flex gap-8 align-items-center">
-                    <div>
-                        <ul class="pagination p-0 gap-8">
-                            <li class="pagination-item"><a class="pagination-number" href="#"><i
-                                        class="icon-scisp-angle-right"></i></a></li>
-                            <li class="pagination-item"><a class="pagination-number active" href="#">1</a></li>
-                            <li class="pagination-item"><a class="pagination-number" href="#">2</a></li>
-                            <li class="pagination-item"><a class="pagination-number" href="#">3</a></li>
-                            <li class="pagination-item"><a class="pagination-number rotate-180" href="#"><i
-                                        class="icon-scisp-angle-right"></i></a></li>
-                        </ul>
-                    </div>
-                    <div>
-                        <p>
-                            اجمالى عدد الصفحات 246
-                        </p>
-                    </div>
-                </div>
+            </div>
             </div>
         </div>
-    </section>
+    </article>
     <!-- page edit date -->
     <section class="scips-page-edit-date px-16 py-16">
         <div class="container">
