--- a/news.html
+++ b/news.html
@@ -280,8 +280,8 @@
     <!-- breadcrumb -->
     <section class="scisp-breadcrumb d-flex bg-dark-primary text-white gap-48">
         <div class="container">
-            <div class="d-flex gap-12 flex-column">
-                <div class="scisp-page-path d-flex gap-4">
+            <div class="d-flex gap-12 flex-column pb-48">
+                <!-- <div class="scisp-page-path d-flex gap-4">
                     <div class="pl-4">
                         <a>الرئيسية</a>
                     </div>
@@ -292,14 +292,20 @@
                     <div class="opicity-60 d-flex gap-4 pl-4">
                         <i class="icon-scisp-angle-right"></i>
                         <a>الاخبار</a>
-                    </div>
-                </div>
+                    </div> 
+                </div> -->
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="#">الرئيسية</a></li>
+                        <li class="breadcrumb-item"><a href="#">المركز الاعلامي</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">الأخبار</li>
+                    </ol>
+                </nav>
                 <div class="spcisp-page-title heading-1">
                     <h1>الأخبار</h1>
                 </div>
             </div>
         </div>
-
     </section>
 
     <!--News Section-->
