--- a/news.html
+++ b/news.html
@@ -541,18 +541,34 @@
                 </div>
                 <div class="scisp-page-pagination m-auto px-16 py-16 d-flex gap-8 align-items-center">
                     <div>
-                        <ul class="pagination p-0 gap-8">
+                        <ul class="pagination p-0 gap-8 mb-0">
                             <li class="pagination-item"><a class="pagination-number" href="#"><i
                                         class="icon-scisp-angle-right"></i></a></li>
-                            <li class="pagination-item"><a class="pagination-number active" href="#">1</a></li>
-                            <li class="pagination-item"><a class="pagination-number" href="#">2</a></li>
-                            <li class="pagination-item"><a class="pagination-number" href="#">3</a></li>
-                            <li class="pagination-item"><a class="pagination-number rotate-180" href="#"><i
-                                        class="icon-scisp-angle-right"></i></a></li>
+                            <li class="pagination-item">
+                                <a class="pagination-number active" href="#">
+                                    <span>1</span>
+                                </a>
+                            </li>
+                            <li class="pagination-item">
+                                <a class="pagination-number" href="#">
+                                <span>2</span>
+                                </a>
+                            </li>
+                            <li class="pagination-item">
+                                <a class="pagination-number" href="#">
+                                    <span>3</span>
+                                </a>
+                            </li>
+                            <li class="pagination-item">
+                                <a class="pagination-number rotate-180" href="#">
+                                    <i class="icon-scisp-angle-right"></i>
+                                </a>
+                            </li>
+                            
                         </ul>
                     </div>
                     <div>
-                        <p>
+                        <p class="mb-0">
                             اجمالى عدد الصفحات 246
                         </p>
                     </div>
