--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <div class="row">
                 <div class="col-md-6 col-lg-4 text-white">
                     <div class="d-flex flex-column gap-24">
-                        <div class="spcisp-title d-flex justify-content-between align-items-center">
+                        <div class="spcisp-title d-flex justify-content-between">
                             <h2>عن المركز</h2>
                             <div class="d-block d-md-none">
                                 <button class="btn btn-secondary text-white d-flex align-items-center">
